# ctf-terminal

./: .gitignore  README.md
.github/workflows/: pages-static.yml
secure_terminal/: ARCHITECTURE.md  Cargo.toml  README.md
secure_terminal/src/: commands.rs  decrypt.rs  encrypt  encrypt.rs  encryption.rs  filesystem.rs  lib.rs  myencrypt.txt
web/: index.html
web/pkg/: package.json  secure_terminal.d.ts  secure_terminal.js  secure_terminal_bg.wasm  secure_terminal_bg.wasm.d.ts
